# wallhaven-local

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.module.css  App.tsx
src-tauri/: Cargo.toml  directory.txt  tauri.conf.json
src-tauri/src/: data.json  main.rs
